fixed mobile background showing full bleed for false

--- a/app/themes/so-il/src/sass/slideshow.scss
+++ b/app/themes/so-il/src/sass/slideshow.scss
@@ -80,6 +80,11 @@
     [dir="rtl"] & {
         float: right;
     }
+    
+    .background[data-full-bleed="false"] {
+      background-image:none !important;
+    }
+    
     img {
         display: block;
     }
